--- a/index.html
+++ b/index.html
@@ -2,101 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Умный квиз с антибот-защитой | Flexbe Quiz</title>
-  <link rel="icon" type="image/png" href="https://i.imgur.com/51rnOkm.png">
+  <title>Проверка на банкротство</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f9fb; color: #333; line-height: 1.6; }
-
-    /* Header */
-    header {
-      background: linear-gradient(rgba(10,61,98,0.85), rgba(10,61,98,0.9)),
-                  url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1600&q=80') no-repeat center/cover;
-      color: white; text-align: center; padding: 80px 20px;
-      position: relative;
-    }
-    .header-content {
-      max-width: 1100px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    header h1 { font-size: 42px; margin-bottom: 15px; font-weight: 700; }
-    header .subtitle { font-size: 22px; margin-bottom: 25px; opacity: 0.95; }
-    .btn {
-      display: inline-block; padding: 16px 32px; background: #ff6b6b;
-      color: white; font-weight: bold; border-radius: 8px; text-decoration: none;
-      box-shadow: 0 4px 15px rgba(255,107,107,0.3); transition: 0.3s;
-      font-size: 18px;
-    }
-    .btn:hover { background: #ff4b4b; transform: translateY(-2px); }
-
-    .section { padding: 80px 20px; max-width: 1100px; margin: auto; }
-    .section h2 { text-align: center; font-size: 36px; margin-bottom: 50px; color: #0a3d62; font-weight: 700; }
-
-    /* Features */
-    .features { display: flex; flex-wrap: wrap; gap: 25px; justify-content: center; }
-    .feature {
-      flex: 1 1 300px; background: white; padding: 35px 25px;
-      border-radius: 12px; text-align: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: 0.3s;
-    }
-    .feature:hover { transform: translateY(-8px); }
-    .feature img { width: 70px; margin-bottom: 20px; }
-    .feature h3 { font-size: 20px; margin-bottom: 15px; color: #0a3d62; }
-
-    /* Promo block */
-    .promo-block{
-      background: #0a3d62; color: white; padding: 50px 20px;
-      text-align: center;
-    }
-    .promo-inner{ max-width:1100px; margin:0 auto; }
-    .promo-title{
-      font-weight: 700; font-size: 28px; line-height:1.3; margin-bottom: 20px;
-    }
-    .promo-list{ 
-      list-style: none; max-width: 600px; margin: 0 auto;
-    }
-    .promo-list li{ 
-      margin: 15px 0; padding-left: 30px; text-align: left;
-      position: relative;
-    }
-    .promo-list li:before {
-      content: "•"; color: #ff6b6b; font-size: 24px;
-      position: absolute; left: 0; top: -2px;
-    }
-
-    footer {
-      background: #0a3d62; color: #fff; text-align: center; padding: 40px 20px;
-    }
-
-    /* Popup form */
-    #leadOverlay {
-      display:none; position:fixed; inset:0;
-      background:rgba(0,0,0,0.6); z-index:9998;
-    }
-    #leadPopup, #leadThanks {
-      display:none; position:fixed; top:50%; left:50%;
-      transform:translate(-50%,-50%);
-      background:#fff; color:#333; padding:30px;
-      border-radius:16px; z-index:9999;
-      max-width:400px; width:90%;
-      box-shadow:0 0 30px rgba(0,0,0,0.4);
-      text-align:center;
-    }
-    #leadPopup h3 { margin-bottom:20px; color:#0a3d62; font-size:22px; }
-    #leadPopup input {
-      width:100%; padding:12px; border-radius:8px;
-      border:1px solid #ccc; margin-bottom:15px;
-      font-size:16px;
-    }
-    #leadPopup button {
-      width:100%; padding:14px;
-      border:none; border-radius:8px;
-      background-color:#ff6b6b; color:#fff;
-      font-weight:bold; cursor:pointer; font-size:16px;
-    }
-    #leadPopup button:hover { background:#ff4b4b; }
 
     /* === КВИЗ FLEXBE СТИЛЬ === */
 .quiz-wrapper * { all: unset; display: revert; box-sizing: border-box; }
@@ -262,182 +172,145 @@
       40%{opacity:1;}
     }
 
-    @media (max-width: 768px) {
-      .header-content { flex-direction: column; text-align: center; }
-      header h1 { font-size: 32px; }
-      .section { padding: 50px 20px; }
+    /* Popup form */
+    #leadOverlay {
+      display:none; position:fixed; inset:0;
+      background:rgba(0,0,0,0.6); z-index:9998;
     }
+    #leadPopup, #leadThanks {
+      display:none; position:fixed; top:50%; left:50%;
+      transform:translate(-50%,-50%);
+      background:#fff; color:#333; padding:30px;
+      border-radius:16px; z-index:9999;
+      max-width:400px; width:90%;
+      box-shadow:0 0 30px rgba(0,0,0,0.4);
+      text-align:center;
+    }
+    #leadPopup h3 { margin-bottom:20px; color:#0a3d62; font-size:22px; }
+    #leadPopup input {
+      width:100%; padding:12px; border-radius:8px;
+      border:1px solid #ccc; margin-bottom:15px;
+      font-size:16px;
+    }
+    #leadPopup button {
+      width:100%; padding:14px;
+      border:none; border-radius:8px;
+      background-color:#ff6b6b; color:#fff;
+      font-weight:bold; cursor:pointer; font-size:16px;
+    }
+    #leadPopup button:hover { background:#ff4b4b; }
   </style>
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="header-content">
-      <h1>Умный квиз с антибот-защитой</h1>
-      <p class="subtitle">Собирайте только качественные лиды 24/7 с интеллектуальной фильтрацией</p>
-      <a href="#quiz" class="btn">Протестировать квиз</a>
-    </div>
-  </header>
-
-  <!-- Квиз -->
-  <section id="quiz" class="section">
-    <h2>Протестируйте умный квиз</h2>
-    <p style="text-align: center; margin-bottom: 30px; font-size: 18px;">Система анализирует поведение и автоматически фильтрует ботов</p>
-    
-    <div class="quiz-wrapper">
-      <div class="quiz" id="quiz">
-        <div class="quiz__header">
-          <div class="quiz__logo">Q</div>
-          <div class="quiz__title">Умный квиз с антиботом</div>
-          <div class="quiz__progress">
-            <span id="pText">1 / 5</span>
-            <div class="bar"><span id="pBar"></span></div>
-          </div>
-        </div>
-        <div class="quiz__body">
-          <div class="step active" data-step="1">
-            <div class="q">1. Какая у вас сумма долга?</div>
-            <div class="options">
-              <button class="btn-opt" data-name="debt" data-value="до 300 тыс.">До 300 тыс.</button>
-              <button class="btn-opt" data-name="debt" data-value="300–500 тыс.">300–500 тыс.</button>
-              <button class="btn-opt" data-name="debt" data-value="более 500 тыс.">Более 500 тыс.</button>
-            </div>
-          </div>
-
-          <div class="step" data-step="2">
-            <div class="q">2. Есть ли просрочки?</div>
-            <div class="options">
-              <button class="btn-opt" data-name="delay" data-value="нет">Нет</button>
-              <button class="btn-opt" data-name="delay" data-value="менее 3 мес.">Менее 3 мес.</button>
-              <button class="btn-opt" data-name="delay" data-value="более 3 мес.">Более 3 мес.</button>
-            </div>
-          </div>
-
-          <div class="step" data-step="3">
-            <div class="q">3. Работаете официально?</div>
-            <div class="options">
-              <button class="btn-opt" data-name="job" data-value="да">Да</button>
-              <button class="btn-opt" data-name="job" data-value="нет">Нет</button>
-            </div>
-          </div>
-
-          <div class="step" data-step="4">
-            <div class="q">4. Есть ли имущество кроме жилья?</div>
-            <div class="options">
-              <button class="btn-opt" data-name="property" data-value="нет">Нет</button>
-              <button class="btn-opt" data-name="property" data-value="есть, хочу сохранить">Есть, хочу сохранить</button>
-              <button class="btn-opt" data-name="property" data-value="готов продать">Готов продать</button>
-            </div>
-          </div>
-
-          <div class="step" data-step="5">
-            <div class="q">5. Оставьте контакт для результата</div>
-            <div class="lead" id="leadForm">
-              <div class="field">
-                <label>Ваше имя</label>
-                <input id="quizName" class="input" placeholder="Иван">
-              </div>
-              <div class="field">
-                <label>Телефон</label>
-                <input id="quizPhone" class="input" placeholder="+7 900 000-00-00">
-              </div>
-              <!-- HONEYPOT ПОЛЕ (скрытое) -->
-              <input type="text" id="quizHoneypot" style="display: none !important; opacity: 0; position: absolute; left: -9999px;" tabindex="-1" autocomplete="off">
-            </div>
-            <div class="result" id="summaryBox" style="display:none;"></div>
-          </div>
-
-          <div class="controls">
-            <button class="btn btn--ghost" id="prevBtn" disabled>← Назад</button>
-            <button class="btn btn--primary" id="nextBtn">Далее →</button>
-          </div>
-          <div class="muted">Ответьте на 5 вопросов, чтобы проверить возможность</div>
-        </div>
-        <div class="footer">
-          <div class="hint">Антибот включён • Поведение анализируется</div>
-          <div class="hint" id="status">Шаг 1 из 5</div>
+  <!-- ТОЛЬКО КВИЗ -->
+  <div class="quiz-wrapper">
+    <div class="quiz" id="quiz">
+      <div class="quiz__header">
+        <div class="quiz__logo">AU</div>
+        <div class="quiz__title">Проверка на банкротство</div>
+        <div class="quiz__progress">
+          <span id="pText">1 / 5</span>
+          <div class="bar"><span id="pBar"></span></div>
         </div>
       </div>
+      <div class="quiz__body">
+        <div class="step active" data-step="1">
+          <div class="q">1. Какая у вас сумма долга?</div>
+          <div class="options">
+            <button class="btn-opt" data-name="debt" data-value="до 300 тыс.">До 300 тыс.</button>
+            <button class="btn-opt" data-name="debt" data-value="300–500 тыс.">300–500 тыс.</button>
+            <button class="btn-opt" data-name="debt" data-value="более 500 тыс.">Более 500 тыс.</button>
+          </div>
+        </div>
+
+        <div class="step" data-step="2">
+          <div class="q">2. Есть ли просрочки?</div>
+          <div class="options">
+            <button class="btn-opt" data-name="delay" data-value="нет">Нет</button>
+            <button class="btn-opt" data-name="delay" data-value="менее 3 мес.">Менее 3 мес.</button>
+            <button class="btn-opt" data-name="delay" data-value="более 3 мес.">Более 3 мес.</button>
+          </div>
+        </div>
+
+        <div class="step" data-step="3">
+          <div class="q">3. Работаете официально?</div>
+          <div class="options">
+            <button class="btn-opt" data-name="job" data-value="да">Да</button>
+            <button class="btn-opt" data-name="job" data-value="нет">Нет</button>
+          </div>
+        </div>
+
+        <div class="step" data-step="4">
+          <div class="q">4. Есть ли имущество кроме жилья?</div>
+          <div class="options">
+            <button class="btn-opt" data-name="property" data-value="нет">Нет</button>
+            <button class="btn-opt" data-name="property" data-value="есть, хочу сохранить">Есть, хочу сохранить</button>
+            <button class="btn-opt" data-name="property" data-value="готов продать">Готов продать</button>
+          </div>
+        </div>
+
+        <div class="step" data-step="5">
+          <div class="q">5. Оставьте контакт для результата</div>
+          <div class="lead" id="leadForm">
+            <div class="field">
+              <label>Ваше имя</label>
+              <input id="quizName" class="input" placeholder="Иван">
+            </div>
+            <div class="field">
+              <label>Телефон</label>
+              <input id="quizPhone" class="input" placeholder="+7 900 000-00-00">
+            </div>
+            <!-- HONEYPOT ПОЛЕ (скрытое) -->
+            <input type="text" id="quizHoneypot" style="display: none !important; opacity: 0; position: absolute; left: -9999px;" tabindex="-1" autocomplete="off">
+          </div>
+          <div class="result" id="summaryBox" style="display:none;"></div>
+        </div>
+
+        <div class="controls">
+          <button class="btn btn--ghost" id="prevBtn" disabled>← Назад</button>
+          <button class="btn btn--primary" id="nextBtn">Далее →</button>
+        </div>
+        <div class="muted">Ответьте на 5 вопросов, чтобы проверить возможность банкротства</div>
+      </div>
+      <div class="footer">
+        <div class="hint">Антибот включён • Поведение анализируется</div>
+        <div class="hint" id="status">Шаг 1 из 5</div>
+      </div>
     </div>
-  </section>
+  </div>
 
-  <!-- Преимущества антибота -->
-  <section class="section" style="background: #f0f5fa; padding: 80px 20px;">
-    <h2>Преимущества умного антибота</h2>
-    <div class="features">
-      <div class="feature">
-        <img src="https://img.icons8.com/color/96/security-shield.png" alt="Защита">
-        <h3>100% защита от ботов</h3>
-        <p>Автоматические скрипты и спам-заявки блокируются в реальном времени</p>
-      </div>
-      <div class="feature">
-        <img src="https://img.icons8.com/color/96/24-hours.png" alt="24/7">
-        <h3>Работает 24/7</h3>
-        <p>Собирайте заявки даже вне рабочего времени с интеллектуальной фильтрацией</p>
-      </div>
-      <div class="feature">
-        <img src="https://img.icons8.com/color/96/analytics.png" alt="Аналитика">
-        <h3>Умная аналитика</h3>
-        <p>Оценка "теплоты" клиента и фильтрация нецелевых обращений</p>
-      </div>
+  <!-- ТОЛЬКО ДИАЛОГОВОЕ ОКНО -->
+  <div class="chat-container">
+    <div class="chat-header">
+      <img src="https://i.imgur.com/VnE8ZUa.png" alt="Анна">
+      <div class="title">Юрист-консультант Анна</div>
     </div>
-  </section>
-
-  <!-- Промо-блок -->
-  <section class="promo-block">
-    <div class="promo-inner">
-      <div class="promo-title">Идеальное решение для сайтов с РСЯ-трафиком</div>
-      <ul class="promo-list">
-        <li><b>Защита от 80% ботов</b> - автоматическая фильтрация спам-трафика</li>
-        <li><b>Экономия бюджета</b> - боты не тратят деньги на рекламу</li>
-        <li><b>Чистые лиды</b> - в CRM попадают только реальные клиенты</li>
-        <li><b>Работа 24/7</b> - обработка заявок даже ночью и в выходные</li>
-      </ul>
+    <div class="chat-messages" id="chat"></div>
+    <div id="typingIndicator" style="display:none; padding:10px 20px; font-size:14px; color:#0a3d62;">
+      Анна печатает<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span>
     </div>
-  </section>
-
-  <!-- Чат-консультант -->
-  <section class="section">
-    <h2>AI-консультант для обработки заявок</h2>
-    <p style="text-align: center; margin-bottom: 30px; font-size: 18px;">Умный помощник отвечает на вопросы и собирает контакты 24/7</p>
-
-    <div class="chat-container">
-      <div class="chat-header">
-        <img src="https://i.imgur.com/VnE8ZUa.png" alt="Ассистент">
-        <div class="title">AI-консультант Анна</div>
-      </div>
-      <div class="chat-messages" id="chat"></div>
-      <div id="typingIndicator" style="display:none; padding:10px 20px; font-size:14px; color:#0a3d62;">
-        Анна печатает<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span>
-      </div>
-      <div class="chat-suggestions">
-        <button onclick="quickSend('Хочу узнать подробности')">Узнать подробности</button>
-        <button onclick="quickSend('Как работает антибот?')">Про антибот</button>
-        <button onclick="quickSend('Хочу подключить')">Подключить</button>
-      </div>
-      <div class="chat-input">
-        <button onclick="startVoice()" title="Говорить">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M192 256c0 17.7-14.3 32-32 32s-32-14.3-32-32V128c0-17.7 14.3-32 32-32s32 14.3 32 32V256zM160 320c35.3 0 64-28.7 64-64V128a64 64 0 1 0-128 0V256c0 35.3 28.7 64 64 64zm56 32H104c-13.3 0-24 10.7-24 24s10.7 24 24 24h24v56c0 13.3 10.7 24 24 24s24-10.7 24-24V400h24c13.3 0 24-10.7 24-24s-10.7-24-24-24z"/></svg>
-        </button>
-        <input type="text" id="chatInput" placeholder="Введите ваш вопрос...">
-        <button onclick="sendMessage()">Отправить</button>
-      </div>
+    <div class="chat-suggestions">
+      <button onclick="quickSend('Хочу узнать стоимость банкротства')">Узнать стоимость</button>
+      <button onclick="quickSend('Какие документы нужны?')">Необходимые документы</button>
+      <button onclick="quickSend('Могу ли я списать долги?')">Проверка возможности</button>
     </div>
-  </section>
-
-  <footer>
-    <p>© 2025. Умный квиз с антибот-защитой</p>
-    <p style="margin-top: 10px; font-size: 14px; opacity: 0.8;">Технологии AI и машинного обучения для вашего бизнеса</p>
-  </footer>
+    <div class="chat-input">
+      <button onclick="startVoice()" title="Говорить">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M192 256c0 17.7-14.3 32-32 32s-32-14.3-32-32V128c0-17.7 14.3-32 32-32s32 14.3 32 32V256zM160 320c35.3 0 64-28.7 64-64V128a64 64 0 1 0-128 0V256c0 35.3 28.7 64 64 64zm56 32H104c-13.3 0-24 10.7-24 24s10.7 24 24 24h24v56c0 13.3 10.7 24 24 24s24-10.7 24-24V400h24c13.3 0 24-10.7 24-24s-10.7-24-24-24z"/></svg>
+      </button>
+      <input type="text" id="chatInput" placeholder="Введите ваш вопрос...">
+      <button onclick="sendMessage()">Отправить</button>
+    </div>
+  </div>
 
   <!-- Overlay + Form + Thanks -->
   <div id="leadOverlay"></div>
 
   <div id="leadPopup">
-    <h3 id="leadTitle">Оставьте заявку на демонстрацию</h3>
+    <h3 id="leadTitle">Оставьте заявку на консультацию</h3>
     <input id="leadName" placeholder="Ваше имя">
     <input id="leadPhone" placeholder="+7 (___) ___-__-__">
-    <button id="leadSubmitBtn">Получить демонстрацию</button>
+    <button id="leadSubmitBtn">Получить консультацию</button>
   </div>
 
   <div id="leadThanks">
@@ -572,7 +445,7 @@
   window.addEventListener("load",()=>{
     setTimeout(()=>{
       if(messages.length===0){
-        appendMessage("Здравствуйте! Я AI-консультант Анна. Расскажу про умный квиз с антибот-защитой. Чем могу помочь?", false);
+        appendMessage("Здравствуйте! Я юрист-консультант Анна. Готова ответить на все ваши вопросы по процедуре банкротства физических лиц. Чем могу помочь?", false);
       }
     },1000);
   });
@@ -681,7 +554,7 @@
         console.log("ANTIBOT DEBUG:", d);
         console.log("Score:", d.score, "Action:", d.action);
         
-        const verdict=d.action==="allow"?"✅ Подходит, менеджер свяжется":
+        const verdict=d.action==="allow"?"✅ Подходит, юрист свяжется":
           d.action==="challenge"?"⚠️ Нужна проверка":"⛔️ Похоже, это бот";
         $("#summaryBox").style.display="block";
         $("#summaryBox").textContent=verdict;
