--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
 <script src="https://unpkg.com/imask"></script>
 <script>
   // === ВСЕ СЕРВИСНЫЕ URL ОСТАЮТСЯ БЕЗ ИЗМЕНЕНИЙ ===
-  const OPENAI_PROXY_URL = "https://openai-gpt-proxy-mcnj.onrender.com/gpt";
-  const LEAD_URL = "https://openai-gpt-proxy-mcnj.onrender.com/lead";
-  const QUIZ_URL = "https://openai-gpt-proxy-mcnj.onrender.com/quiz";
+  const OPENAI_PROXY_URL = "https://openai-gpt-proxy-d2py.onrender.com/gpt";
+  const LEAD_URL = "https://openai-gpt-proxy-d2py.onrender.com/lead";
+  const QUIZ_URL = "https://openai-gpt-proxy-d2py.onrender.com/quiz";
 
   // === ВЕСЬ JAVASCRIPT КОД ОСТАЕТСЯ БЕЗ ИЗМЕНЕНИЙ ===
   let messages = [];
