--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   
   <!-- КОНФИГУРАЦИЯ НОВОГО АНТИБОТ-SDK -->
   <script>
-    window.GIGABOT_CONFIG = {
-      endpoint: "https://openai-gpt-proxy-d2py.onrender.com",
-      siteId: "site_demo",
-      publicKey: "pk_live_site_demo_001"
-    };
-  </script>
-  <script src="https://gigabot-admin-biea.onrender.com/gigabot.js" defer></script>
+        window.GIGABOT_CONFIG = {
+          endpoint: "https://gigabot-db4r.onrender.com",
+          adminEndpoint: "https://gigabot-admin-biea.onrender.com",
+          siteId: "site_anti_bot_quiz_zzxj_onrender_co",
+          publicKey: "pk_live_655194bbe8c403f79160085c"
+        };
+      </script>
+      <script src="https://gigabot-admin-biea.onrender.com/gigabot.js" defer></script>
   
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
