--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- КОНФИГУРАЦИЯ НОВОГО АНТИБОТ-SDK -->
-  <script>
-        window.GIGABOT_CONFIG = {
+  <script>        window.GIGABOT_CONFIG = {
           endpoint: "https://gigabot-db4r.onrender.com",
           adminEndpoint: "https://gigabot-admin-biea.onrender.com",
           siteId: "site_anti_bot_quiz_zzxj_onrender_co",
@@ -17,7 +16,7 @@
               endpoint: "https://gigabot-ix8g.onrender.com",
               adminEndpoint: "https://gigabot-admin-vid9.onrender.com",
               siteId: "site_anti_bot_quiz_zzxj_onrender_co",
-              publicKey: "pk_live_655194bbe8c403f79160085c"
+              publicKey: "pk_live_512eb61c144c9b85bae44478"
             }
           ]
         };
